docs/7.56/md/abenbdl_rap_bo.md
---
title: "ABAP CDS - managed and unmanaged behavior definitions"
description: |
  RAP business objects of the implementation types(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_bdef_impl_type_glosry.htm 'Glossary Entry') managed and unmanaged are realized through the same set of keywords. These keywords are listed in the following sections, structured by th
version: "7.56"
category: "cds"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_rap_bo.htm"
abapFile: "abenbdl_rap_bo.htm"
keywords: ["do", "if", "try", "data", "types", "abenbdl", "rap"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Core Data Services (ABAP CDS)](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds.htm) →  [ABAP CDS - RAP Objects](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_rap_objects.htm) →  [ABAP CDS - RAP Business Objects (RAP BO)](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_rap_business_objects.htm) →  [ABAP CDS - Behavior Definitions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_bdef.htm) →  [ABAP CDS - BDL for Behavior Definitions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl.htm) → 

ABAP CDS - managed and unmanaged behavior definitions

RAP business objects of the [implementation types](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_bdef_impl_type_glosry.htm "Glossary Entry") managed and unmanaged are realized through the same set of keywords. These keywords are listed in the following sections, structured by their position within the behavior definition. Some keywords are used differently in managed and unmanaged RAP BOs, or they are handled by the RAP framework in managed scenarios and need to be implemented in unmanaged scenarios. These differences are described in the respective topics.

Continue
[CDS BDL - CDS behavior definition header](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_bdef_header.htm)
[CDS BDL - entity behavior definition](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_define_beh.htm)
[CDS BDL - define authorization context](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_authorization_context.htm)